@@ -11,6 +11,6 @@ AUX patches/vmnet/030_all_kernel-2.6.27.patch 2427 RMD160 0d983187f130d82b724447
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 DIST vmware-modules-1.0.0.23.amd64.tar.bz2 489196 RMD160 5ef5d18ec22129cd4563d14ed8b213fdd3ad86ec SHA1 64a2fb7b1195d3ee773b9e49fe8dc9b5d7ffc43a SHA256 7d8028b9da2ad1694a6e71f1f6b1f63a9a03e78249f4cacdfccd1ea508e07d2a
 DIST vmware-modules-1.0.0.23.x86.tar.bz2 486085 RMD160 d039206f0ed3fcd93f7acf3bc24c340b8641057a SHA1 5a4e9ed931f6592c8332239e424afdd80b1b46e5 SHA256 5780292e519da9e1512bf78b1e0e6c21e44f4e10f214dcc0caf83af482dedf68
-EBUILD vmware-modules-1.0.0.15-r2.ebuild 313 RMD160 7d687db91475f5f4c6db480a10ab5e5c85e01aec SHA1 5101c4789dd0380b286f36d65795ac49ec259db4 SHA256 a09e6f95af12837966707c53deed4c8bc53069719cf3bc60537e3a630ceb9d1a
+EBUILD vmware-modules-1.0.0.15-r2.ebuild 443 RMD160 36501ec296ead49da63dbca605c276359acee513 SHA1 c5ef47378cac59a611badfae11133cac4e3bc3e8 SHA256 6b5ba20cf2dca077ed7ecb8e34d8a758e19560e6afc0f0c507d7aad4104b8a07
 EBUILD vmware-modules-1.0.0.23.ebuild 726 RMD160 846196c669b057606cca33e0301559adbaeddc0a SHA1 67432dcb6bd2b64b73c7e141de0545fab6debbb0 SHA256 7e292abe93d1150e73aa220e3de1b52405269dbb2feab7b33e0843429d0630d8
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
